fix wrapping

--- a/src/html/css/style.css
+++ b/src/html/css/style.css
@@ -118,10 +118,9 @@ select {
 
 #output {
     background: #f5f5f5;
-    overflow-y: auto;
     font-family: monospace;
-    white-space: pre-wrap;
     border: 1px solid #ccc;
+    white-space: pre-line;
 }
 
 button {
